# wadachi-os

./: .gitignore  Cargo.toml  README.md  build.rs  linker.ld
.cargo/: config
.github/workflows/: ci.yml
src/: boot.s  machine.rs  main.rs  riscv.rs  stdio.rs  supervisor.rs  test.rs  tests.rs
src/machine/: malloc.rs  stdio.rs  test.rs
src/riscv/: csr.rs  helper.rs  instructions.rs  memory.rs  mepc.rs  mstatus.rs  registers.rs  syscall.rs
src/riscv/helper/: exception_handler.s  jump.s  setjmp.rs
src/riscv/instructions/: ecall.rs  mret.rs  wfi.rs
src/riscv/memory/: ppn.rs  pte.rs  ptp.rs
src/riscv/registers/: mcause.rs  mepc.rs  mstatus.rs  mtval.rs  mtvec.rs  pmpaddr.rs  pmpcfg.rs  satp.rs  sepc.rs  stval.rs  stvec.rs
src/riscv/syscall/: entry.rs  sys_write.rs
src/supervisor/: syscall_wrapper.rs
src/tests/: integration_test.rs  test.rs
src/tests/custom_test/: Cargo.toml
src/tests/custom_test/src/: lib.rs
