[package]
name = "wadachi-os"
version = "0.1.0"
authors = ["ikanago <28985004+ikanago@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
opt-level = 0

[dependencies]
spin = "0.7.1"
bit_field = "0.10.1"
paste = "1.0.4"
seq-macro = "0.2.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.66"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 0
test-timeout = 10

