[package]
name = "custom_test"
version = "0.1.0"
authors = ["Iwancof <rock.iwancof@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.10"
syn = {version="1.0.17", features=["full", "extra-traits"]}

[lib]
proc-macro = true

